# acapy-did-indy

./: Dockerfile  Dockerfile.server  README.md  pyproject.toml
acapy_did_indy/: __init__.py  did.py  registrar.py  resolver.py  routes.py
acapy_did_web/: __init__.py  client.py  did.py  routes.py
demo/: Dockerfile  demo.py  docker-compose.yml
interop/: docker-compose.yml
interop/credo/: Dockerfile
interop/tests/: conftest.py  test_json_ld_creds.py
tests/: test_indy_resolver.py
